# actix-starter

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  model.rs
src/config/: mod.rs
src/libs/: redis_client.rs
