[package]
name = "byte-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
config = { version = "0.13.3", features = ["default"] }
jsonwebtoken = "9.1.0"
validator = { version = "0.16.1", features = ["derive"] }
base64 = "0.21.2"
tracing-actix-web = "0.7.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.2.0"
tracing-appender = "0.2.2"
tracing = "0.1.37"
redis = { version = "0.23", features = ["tokio-rustls-comp"] }
serde_json = "1.0.96"
deadpool-redis = "0.13.0"
actix-cors = "0.6.4"
futures = "0.3.28"
reqwest = "0.11.22"
serde-inline-default = "0.2.3"
